# TaskTrakerBot

./: README.md  bot.py  pyproject.toml  requirements.txt  service.py  test.py
admin/: setup_databse.py
admin_router/: commands.py  model.py
config/: const.py  task_difficulties.py  task_priority.py
database/: crud.py  model.py
handlers/: callback.py  habits.py  user_commands.py
keyboards/: inline.py
routers/: habbit_router.py
src/: bot.py
src/custom_logger/: logger.py
src/routers/: habbit_router.py
states/: task.py
