[project]
name = "tasktrakerbot"
version = "0.1.0"
description = "Telegram Bot for task traking"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiofiles==25.1.0",
    "aiogram==3.25.0",
    "aiohappyeyeballs==2.6.1",
    "aiohttp==3.13.3",
    "aiosignal==1.4.0",
    "aiosqlite==0.22.1",
    "annotated-types==0.7.0",
    "apscheduler==3.11.2",
    "asttokens==3.0.1",
    "attrs==25.4.0",
    "certifi==2026.1.4",
    "colorama==0.4.6",
    "comm==0.2.3",
    "debugpy==1.8.20",
    "decorator==5.2.1",
    "dotenv==0.9.9",
    "executing==2.2.1",
    "flake8==7.3.0",
    "frozenlist==1.8.0",
    "greenlet==3.3.2",
    "idna==3.11",
    "ipykernel==7.2.0",
    "ipython==9.10.0",
    "ipython-pygments-lexers==1.1.1",
    "jedi==0.19.2",
    "jupyter-client==8.8.0",
    "jupyter-core==5.9.1",
    "magic-filter==1.0.12",
    "matplotlib-inline==0.2.1",
    "mccabe==0.7.0",
    "multidict==6.7.1",
    "nest-asyncio==1.6.0",
    "packaging==26.0",
    "parso==0.8.6",
    "pip==25.1.1",
    "platformdirs==4.9.2",
    "prompt-toolkit==3.0.52",
    "propcache==0.4.1",
    "psutil==7.2.2",
    "pure-eval==0.2.3",
    "pycodestyle==2.14.0",
    "pydantic==2.12.5",
    "pydantic-core==2.41.5",
    "pyflakes==3.4.0",
    "pygments==2.19.2",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.2.1",
    "pyzmq==27.1.0",
    "ruff==0.15.2",
    "six==1.17.0",
    "sqlalchemy==2.0.46",
    "stack-data==0.6.3",
    "tornado==6.5.4",
    "traitlets==5.14.3",
    "typing-extensions==4.15.0",
    "typing-inspection==0.4.2",
    "tzdata==2025.3",
    "tzlocal==5.3.1",
    "uv==0.10.4",
    "wcwidth==0.6.0",
    "yarl==1.22.0",
]
